fix(styles): content overflow in firefox

--- a/src/cyc-editor-window/cyc-editor-window.css
+++ b/src/cyc-editor-window/cyc-editor-window.css
@@ -9,6 +9,7 @@
 .body {
   display: flex;
   flex: 1;
+  overflow: hidden;
 }
 
 .activity-bar {
